--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,9 @@ a{
 	/*text-shadow: 0 0 20px #4f5357;*/
 	box-shadow: inset 0 0 0 20px #e9f0de, 0 0 0 5px #e9f0de;
 }
+.bar a:active{
+	color: #394048bd;
+}
 /****************End of navigation bar*********************/
 
 .home{
@@ -353,10 +356,13 @@ div.info > p{
 	padding:0;
 	height: 32px;
 	font-size: 20px;
+	font-weight: 	bold;
 	padding-bottom: 6px;
 	padding-left: 	2px;
 }
-
+.input > input:hover{
+	background: #97979714;
+}
 
 #label-fn{
 	margin-right: 	2%;
@@ -439,6 +445,13 @@ div.info > p{
 	border-bottom: 2px solid #394048; 
 	margin-top: 5%;
 	cursor: pointer;
+}
+#privacy:hover{
+	text-shadow: 0 0 40px #394048c7;
+}
+#privacy:active{
+	color: #394048bd;
+	text-shadow: 0 0 40px #394048c7;
 }
 /********************end *********/
 
@@ -586,6 +599,9 @@ div.info > p{
 
 	.rectangle-innov{
 		margin-top: 40px;
+	}
+	.input > input{
+		font-style: 14px;
 	}
 }
 @media only screen and (max-width: 600px){
