--- a/css/style.css
+++ b/css/style.css
@@ -615,6 +615,12 @@ div.info > p{
 	}
 }
 @media only screen and (max-width: 600px){
+	.bar img{
+		margin-left: 	0;
+		margin-top: 7px;
+		width:25%;
+		height: 50%;
+	}
 	.home span{
 		font-size: 20px;
 	}
