--- a/css/privacystyle.css
+++ b/css/privacystyle.css
@@ -70,11 +70,19 @@ div.info{
   }
 }
 @media only screen and (max-width: 600px){
+
+	#header > span{
+		font-size: 30px;
+}
+#header{
+		margin: 16% 8% 0% 8%;
+}
 	#close{
 		position: absolute;
 		right: 0;
 		top: 16%;
-		transform: (0,-50%);
+		transform: translate(	0,-100%);
+		width: 30px;
 		margin-bottom: 0;
 	}
 
