--- a/css/teamstyle.css
+++ b/css/teamstyle.css
@@ -93,3 +93,14 @@ body{
 		margin: 0;
 	}
 }
+@media only screen and (max-width: 600px){
+	#header {
+		height:50px;
+	}
+	#close{
+		height: 100%;
+	}
+	#header > span{
+		font-size: 40px;
+}
+}
